--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,37 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #000;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  background: #fff;
+  width: 90%;
+  height: 100vh;
+  margin: 0 auto;
+  padding-top: 2rem;
+}
+
+.main-message-container {
+  width: 80%;
+  margin: 0 auto;
+  border: 1px solid rgb(54, 54, 54);
+}
+
+.newMessage-input {
+  display: block;
 }
