--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,66 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: Tahoma,Verdana,Segoe,sans-serif; 
+  font-weight: lighter;
+  box-sizing: border-box;
+}
+body {
+  max-width: 500px;
+  margin: 0 auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+main,
+.posts {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.new-message,
+.card {
+  margin-top: 15px;
+  border: 1px #000 solid;
+  box-shadow: 5px 5px 0px 0px #000;
+  padding: 15px;
+}
+
+.new-message {
+  background-color: #f3f1f1;
+}
+
+textarea {
+  width: 100%;
+  resize: none;
+}
+
+.new-message button {
+  background-color: #FFADAD;
+  padding: 10px 20px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  border: none;
+}
+
+.new-message button i {
+  padding: 5px;
+  color: #ff4234;
+}
+
+.card button {
+  padding: 10px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border: none;
+  color: #ff4234;
+}
+
+.liked {
+  background-color: #ffadad;
 }
