--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+    * {
+        box-sizing: border-box;
+    }
+    
+    body {
+        margin: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
+    
+    code {
+        font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    }
+    
+    div {
+        padding: 20px;
+        border-radius: 20px;
+    }
+    
+    h2 {
+        font-size: 2rem;
+        line-height: 1rem;
+    }
+    
+    .thought {
+        background-color: gray;
+        padding-top: 5px;
+    }
+    
+    .feelings {
+        background-color: yellowgreen;
+        margin-bottom: 10px;
+    }
+    
+    .myResult {
+        background-color: silver;
+    }
+    
+    button {
+        font-size: 1.4rem;
+        border-radius: 5px;
+    }
+    
+    input {
+        font-size: 1.4rem;
+        border-radius: 5px;
+    }
+    
+    span {
+        font-size: 2rem;
+    }
