--- a/code/src/index.css
+++ b/code/src/index.css
@@ -18,7 +18,12 @@
         border-radius: 20px;
     }
     
+    h1 {
+        font-size: 2.5rem;
+    }
+    
     h2 {
+        color: silver;
         font-size: 2rem;
         line-height: 1rem;
     }
@@ -37,9 +42,19 @@
         background-color: silver;
     }
     
-    button {
+    select {
+        width: 200px;
         font-size: 1.4rem;
         border-radius: 5px;
+    }
+    
+    button {
+        font-size: 2rem;
+        font-weight: 700;
+        color: white;
+        border-radius: 5px;
+        border: 2px solid rgba(0, 0, 0, 0.2);
+        background-color: yellowgreen;
     }
     
     input {
