--- a/code/src/index.css
+++ b/code/src/index.css
@@ -42,6 +42,16 @@
         background-color: silver;
     }
     
+    .theResult {
+        background-color: yellowgreen;
+    }
+    
+    .theResult p {
+        font-size: 1.3rem;
+        font-weight: 700;
+        color: white;
+    }
+    
     select {
         width: 200px;
         font-size: 1.4rem;
