--- a/code/src/index.css
+++ b/code/src/index.css
@@ -19,17 +19,23 @@
     }
     
     h1 {
-        font-size: 2.5rem;
+        color: white;
+        font-size: 2.8rem;
+        font-weight: 900;
     }
     
     h2 {
-        color: silver;
+        padding: 5px;
+        color: white;
+        background-color: lightsteelblue;
+        border-radius: 10px;
         font-size: 2rem;
-        line-height: 1rem;
     }
     
     .thought {
         background-color: gray;
+        background-color: lightsteelblue;
+        background-color: yellowgreen;
         padding-top: 5px;
     }
     
@@ -47,9 +53,19 @@
     }
     
     .theResult p {
-        font-size: 1.3rem;
+        border-radius: 10px;
+        padding: 10px;
+        font-size: 1.5rem;
         font-weight: 700;
         color: white;
+        background-color: lightsteelblue;
+    }
+    
+    .theResult h1 {
+        color: white;
+        padding: 10px;
+        font-size: 3.5rem;
+        font-weight: 900;
     }
     
     select {
@@ -65,6 +81,7 @@
         border-radius: 5px;
         border: 2px solid rgba(0, 0, 0, 0.2);
         background-color: yellowgreen;
+        background-color: lightsteelblue;
     }
     
     input {
