--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,11 @@
-body {
+* { 
+  padding: 0;
+  margin: 0;
+  font-family: 'Courier', sans-serif;
+}
+
+  
+  body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -7,7 +14,102 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+main {
+  max-width: 1050px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+p {
+  font-size: 12px;
+}
+
+section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+h2 {
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin: 10px;
+  color: #999;
+  font-size: 20px;
+}
+
+article {
+  width: 100%;
+  min-height: 60px;
+  max-width: 500px;
+  background: #fff;
+  padding: 10px;
+  margin: 10px;
+  border: solid #999 1px;
+  box-shadow: #000 5px 5px 0 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.input-thought {
+  background: #eee;
+}
+
+.text {
+  width: 100%;
+  min-height: 40px;
+  font-size: 16px;
+}
+.likes {
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+
+.likes p {
+  margin-left: 10px;
+  color: #888;
+}
+.circle, .circle:active {
+  height: 36px;
+  min-width: 36px;
+  border-radius: 50%;
+  background-color: #ddd;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.heart {
+  height: 16px;
+  width: 16px;
+}
+
+.time {
+  width: 50%;  
+  display: flex;
+  align-items: center;
+  color: #bbb;
+}
+
+.time p {
+  text-align: right;
+  width: 100%;
+}
+
+@media (min-width: 667px) {
+  article {
+    width: 47%;
+    box-sizing: border-box;
+  }
+}
+@media (min-width: 1050px) {
+  article {
+    width: 31%;
+    box-sizing: border-box;
+  }
 }
