--- a/code/src/components/newthought.css
+++ b/code/src/components/newthought.css
@@ -18,6 +18,7 @@
 
 textarea {
   margin: 10px 0;
+  border: 2px solid #d9d9d9;
 }
 
 button {
@@ -27,4 +28,5 @@ button {
   border-radius: 20px;
   font-family: inherit;
   font-weight: bold;
+  cursor: pointer;
 }
