--- a/code/src/components/thoughts.css
+++ b/code/src/components/thoughts.css
@@ -18,13 +18,24 @@
   justify-content: space-between;
 }
 
-.message, .likes {
-  padding: 5px;
+label {
+  font-weight: bold;
 }
 
-.icon {
+.message {
+  padding: 5px;
+  font-weight: bold;
+}
+
+.likes {
+  padding: 5px;
+  color: #a6a6a6;
+}
+
+.heart-button {
   background: #e6e6e6;
   border-radius: 50%;
   padding: 10px;
   margin-right: 10px;
+  cursor: pointer;
 }
