--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Inconsolata', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Inconsolata', monospace;
 }
