--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,58 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+*{
+  font-family: 'Inconsolata', monospace;
+}
+
+.background{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.inputField{
+  color:  #888888;
+  height: 150px;
+  width: 350px;
+  display:flex;
+  flex-direction: column;
+  align-items: baseline;
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px black;
+  
+}
+
+.inputField p{
+  margin: 10px 0px;
+  color: black;
+}
+
+li{
+  list-style-type:none;
+  height: 70px;
+  width: 350px;
+  margin: 30px 0px;
+  border: 1px solid #888888;
+  padding: 10px;
+  box-shadow: 5px 10px black;
+  color:  black;
+}
+
+ul{
+  padding:0px;
+}
+
+.button{
+  background: pink;  
+  border: none;
+  border-radius: 20px;
+  height: 40px;
+  margin: 10px 0px;
+  cursor: pointer;
+}
