done fetch and working on adding things to th form

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* ul {
+  border-style: none;
+}
+
+li {
+  border: solid black 1px;
+  width: 400px;
+  height: 80px;
+  margin-top: 10px;
+  padding-top: 10px;
+  padding-left: 10px;
+} */
