--- a/code/src/app.css
+++ b/code/src/app.css
@@ -5,34 +5,54 @@
 }
 
 .app {
-width: 50%;
+width: 100%;
+display:flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
+
 
 button {
-  background: lightgray;
-  height: auto;
-  border-radius: 50%;
+  background:#eaeaea;
+  height: 40px;
+  width: 40px;
+  border-radius: 3rem;
+  border: none;
 }
-
-
+.thought-input{
+  width: 100%;
+  box-shadow: 5px 5px;
+  height: 120px;
+  border: solid 1px #7e7e7e;
+  margin: 10px;
+  padding: 10px;
+}
 .inside-cards{  
   width: 100%;
   box-shadow: 5px 5px;
   height: 120px;
-  border: solid 2px black;
+  border: solid 1px #7e7e7e;
   margin: 10px;
   padding: 10px;
 }
 
 ul { 
   display:flex;  
-  padding: 50px 0px 0px 0px;
+  padding: 40px 0px 0px 0px;
+}
+ul { 
+  display:flex;  
+  padding: 40px 0px 0px 0px;
 }
 
 li {
   list-style: none;
   padding: 5px;
+  color: #8f8d8d;
 }
+
 li:nth-last-child(1) {
   padding-left: 50px;
+  color: #cacaca;
 }
