--- a/code/src/Hearts.css
+++ b/code/src/Hearts.css
@@ -1,9 +1,11 @@
 .hearts{
   color: #8F8D8D;
-  font-size: 15px;
+  font-size: 12px;
 
 }
-button{
+
+.like-heart{
+  font-family: 'Inconsolata', monospace;
   background-color: #eaeaea;
   border: 0px;
   width: 40px;
@@ -12,6 +14,4 @@ button{
   font-size: 16.5px;
   margin-right: 5px;
   padding:7px 3px 7px 7px;
-}
-.like-heart{
 }
