--- a/code/src/NewThought.css
+++ b/code/src/NewThought.css
@@ -12,10 +12,19 @@
 }
 label{
   margin:0;
-  font-size:15px;
+  font-size:13px;
 }
 input{
   width:369px;
   height:50px;
   border: 2px solid #cacaca;
+}
+.send-button{
+  background-color: #F2ACAD;
+  height:35px;
+  border-radius:25px;
+  font-family: 'Inconsolata', monospace;
+  font-size: 14px;
+  font-weight: bold;
+  width: 50%;
 }
