--- a/code/src/App.css
+++ b/code/src/App.css
@@ -1,23 +1,58 @@
-ul {
-  
-}
-li {
-  border: solid black 1px;
-  width: 200px;
-  height: 60px;
-  margin-top: 10px;
-  padding: 5px;
-  list-style: none;
-  display: flex; 
+* {
+  box-sizing: border-box;
+  font-family: 'Inconsolata', monospace;
+  font-size: 15px;
+} 
+
+.headForm {
+    display: flex;
+    flex-direction: column;
+    /*max-width: 50%;*/
+    align-items: center;
+    margin-top: 40px;
+    margin-left: 40px;
+    width: 500px;
+    height: 160px;
+    border: 1px solid black;
+    background-color: pink; 
+    box-shadow: 6px 6px;  
 }
 
-h4 {
-  border: solid black 1px;
-  width: 200px;
-  height: 60px;
-  margin-top: 10px;
-  padding: 5px;
-  list-style: none;
-  display: flex; 
-  margin-left: 40px;
+ p {
+   
+   margin-left: 20px;
+ }
+
+input.form-text {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    width: 460px;
+    height: 40px;
+    border: 1px solid black;
+    
+}
+
+/* happy thoughts */
+.messages {
+  display: flex;
+  flex-direction: column;
+  /*max-width: 50%;*/
+  align-items: flex-start;
+  justify-content: start;
+  margin-top: 30px;
+  width: 500px;
+  height: 140px;
+  border: 1px solid black;
+  background-color: pink;
+  box-shadow: 6px 6px;
+  padding-left: 20px;
+  padding-top: 25px;
+} 
+
+button {
+    border: 2px solid red; /***Take away later***/
+    border-radius: 13px;
+    background-color: red;
+    margin: 10px 0;
 }
