--- a/code/src/app.css
+++ b/code/src/app.css
@@ -1,7 +1,13 @@
+@font-face{
+  font-family:Menlo;
+  src: url(./Menlo-Regular.ttf);
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
   font-family: 'Inconsolata', monospace;
+  font-family: Menlo;
 }
 
 .app {
@@ -12,47 +18,83 @@ justify-content: center;
 align-items: center;
 }
 
-
-button {
-  background:#eaeaea;
-  height: 40px;
-  width: 40px;
-  border-radius: 3rem;
-  border: none;
-}
 .thought-input{
-  width: 100%;
+  background: #ebebeb;
+  width: 400px;
   box-shadow: 5px 5px;
-  height: 120px;
+  height: 200px;
   border: solid 1px #7e7e7e;
-  margin: 10px;
-  padding: 10px;
+  margin-top: 20px;
+  padding: 20px;
 }
+input,
+textarea {
+  background: #fff;
+    width: 100%;
+    height: 50px;
+    margin-top: 10px;
+    padding: 10px 10px;
+    border: none;
+    border: 2px solid #93989d;
+    background-color: inherit;
+}
+textarea,
+::placeholder{
+  background: #fff;
+color: #93989d;
+opacity: 0.5;
+}
+
 .inside-cards{  
-  width: 100%;
-  box-shadow: 5px 5px;
-  height: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 400px;
+  box-shadow: 8px 8px;
+  height: 140px;
   border: solid 1px #7e7e7e;
-  margin: 10px;
-  padding: 10px;
+  margin-top: 35px;
+  padding: 20px 20px 10px 20px;
+}
+
+p {
+  font-size: 16px;
 }
 
 ul { 
   display:flex;  
-  padding: 40px 0px 0px 0px;
-}
-ul { 
-  display:flex;  
-  padding: 40px 0px 0px 0px;
+  justify-content: space-between;
+  font-size: 13px;
+  padding: 5px;
 }
 
 li {
   list-style: none;
-  padding: 5px;
+  /* padding: 5px; */
   color: #8f8d8d;
 }
 
-li:nth-last-child(1) {
-  padding-left: 50px;
+/* li:nth-last-child(1) {
+  padding: 17px 0px 0px 60px;
   color: #cacaca;
+} */
+
+.send-button {
+  border-radius: 2rem;
+  padding: 10px;
+  border: none;
+  font-family: 'Inconsolata', monospace;
+  margin-top: 35px;
+  background: pink;
+  font-size: 16px;
+}
+ul .time{
+  color: #CACACA;
+  font-size: 13px;
+  font-weight: bold;
+  padding-top: 15px;
+}
+footer {
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
