Added useEffect so that the fetch function is only run at load and whenever a like is given

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -83,6 +83,9 @@ article {
   justify-content: center;
   display: flex;
 }
+.red {
+  background-color: rgb(255, 213, 222);
+}
 
 .heart {
   height: 16px;
