--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,18 +1,40 @@
-body {
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
+  padding: 0;
+  font-family: Inconsolata,monospace;
+  box-sizing: border-box;
+  }
+
+body {
+  margin: 0 auto;
+    max-width: 500px;
+    font-family: 'Inconsolata', monospace;
   -moz-osx-font-smoothing: grayscale;
 }
 
+input {
+    width: 100%;
+    resize: none;
+    margin: 5px;
+    padding: 15px;
+}
+
 .thoughtBox {
+  font-weight: bold;
+  background-color: #f3f1f1;
   margin: 20px 10px;
   border: 1px solid #000;
   box-shadow: 5px 5px 0 0 #000;
   padding: 15px;
+}
 
+.postedThoughts p {
+  color: gray;
+}
+
+.postedThoughts h3 {
+  color:black;
 }
 
 .postedThoughts {
@@ -26,3 +48,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.thoughtBox, .postedThoughts {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  }
+
+  .thoughtBox button {
+    background-color: #ffadad;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-weight: bold;
+  }
