--- a/code/src/components/listthoughts.css
+++ b/code/src/components/listthoughts.css
@@ -9,7 +9,7 @@
 .thought {
   margin: 20px 0;
   padding: 15px;
-  width: 350px;
+  width: 30%;
   height: 100px;
   border: 1px solid #000;
   box-shadow: 5px 10px #000;
@@ -25,6 +25,7 @@ label {
 .message {
   padding: 5px;
   font-weight: bold;
+  overflow: auto;
 }
 
 .details {
@@ -36,6 +37,13 @@ label {
   color: #a6a6a6;
 }
 
+.likes-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .heart-button {
   border-style: none;
   background: #e6e6e6;
@@ -43,4 +51,16 @@ label {
   padding: 8px;
   margin-right: 10px;
   cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+  .thought {
+    width: 40%;
+  }
+}
+
+@media (max-width: 667px) {
+  .thought {
+    width: 80%;
+  }
 }
