--- a/code/src/index.css
+++ b/code/src/index.css
@@ -61,8 +61,8 @@ form {
 }
 textarea {
   width: 100%;
-  /* height: auto; */
   font-size: 14px;
+  resize: vertical;
 
 }
 textarea:focus {
@@ -70,31 +70,39 @@ textarea:focus {
   background: rgb(255, 254, 246);
 }
 .input-box {
-  background: #fff;
+  background: #eee;
   width: 100%;
   max-width: 615px;
   margin-bottom: 30px;
 }
 
 button, button:focus {
-  margin-top: 20px;width: 200px;
+  margin-top: 20px;width: 230px;
   height: 30px;
-  background-color: rgba(235, 86, 66, 0.884);
+  background-color: rgb(255, 213, 222);
   outline: 0;
   border-radius: 15px;
   cursor: pointer;
-  color: #fff;
+  color: rgb(255, 255, 255);
+  transition: background 120ms ease-in, transform 120ms ease-in;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+button img {
   transition: background 120ms ease-in, transform 120ms ease-in;
 }
 
 button:hover {
   transition: background 112ms ease-out;
-  background-color: rgb(255, 0, 0);
+  background-color: rgb(255, 126, 126);
 }
 
 button:disabled {
   background-color: rgb(218, 218, 218);
 }
+
+
 .error-message {
   font-size: 9px;
   color: gray;
@@ -105,6 +113,7 @@ button:disabled {
   width: 100%;
   min-height: 40px;
   font-size: 16px;
+  overflow-wrap: break-word; 
 }
 .likes {
   width: 50%;
