--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,7 +5,7 @@
 }
 
   
-  body {
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -76,6 +76,11 @@ textarea:focus {
   margin-bottom: 30px;
 }
 
+.descriptions {
+  display: flex;
+  justify-content: space-between;
+}
+
 button, button:focus {
   margin-top: 20px;width: 230px;
   height: 30px;
@@ -100,6 +105,7 @@ button:hover {
 
 button:disabled {
   background-color: rgb(218, 218, 218);
+  cursor: not-allowed;
 }
 
 
@@ -167,3 +173,4 @@ button:disabled {
     box-sizing: border-box;
   }
 }
+
