--- a/code/src/index.css
+++ b/code/src/index.css
@@ -4,7 +4,6 @@
   font-family: 'Courier', sans-serif;
 }
 
-  
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -63,7 +62,8 @@ textarea {
   width: 100%;
   font-size: 14px;
   resize: vertical;
-
+  padding-left: 2px;
+  box-sizing: border-box;
 }
 textarea:focus {
   outline: 0;
@@ -107,7 +107,6 @@ button:disabled {
   background-color: rgb(218, 218, 218);
   cursor: not-allowed;
 }
-
 
 .error-message {
   font-size: 9px;
