--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,7 +1,7 @@
-* { 
+* {
   padding: 0;
   margin: 0;
-  font-family: 'Courier', sans-serif;
+  font-family: "Courier", sans-serif;
 }
 
 body {
@@ -42,6 +42,13 @@ h2 {
   font-size: 20px;
 }
 
+h3 {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 12px;
+  color: #333;
+}
+
 article {
   width: 100%;
   min-height: 60px;
@@ -53,6 +60,10 @@ article {
   box-shadow: #000 5px 5px 0 0;
   display: flex;
   flex-wrap: wrap;
+}
+
+hr {
+  border: solid rgb(219, 219, 219) 1px;
 }
 
 form {
@@ -81,8 +92,10 @@ textarea:focus {
   justify-content: space-between;
 }
 
-button, button:focus {
-  margin-top: 20px;width: 230px;
+button,
+button:focus {
+  margin-top: 20px;
+  width: 230px;
   height: 30px;
   background-color: rgb(255, 213, 222);
   outline: 0;
@@ -118,7 +131,7 @@ button:disabled {
   width: 100%;
   min-height: 40px;
   font-size: 16px;
-  overflow-wrap: break-word; 
+  overflow-wrap: break-word;
 }
 .likes {
   width: 50%;
@@ -130,7 +143,8 @@ button:disabled {
   margin-left: 10px;
   color: #888;
 }
-.circle, .circle:active {
+.circle,
+.circle:active {
   height: 36px;
   min-width: 36px;
   border-radius: 50%;
@@ -149,7 +163,7 @@ button:disabled {
 }
 
 .time {
-  width: 50%;  
+  width: 50%;
   display: flex;
   align-items: center;
   color: #bbb;
@@ -172,4 +186,3 @@ button:disabled {
     box-sizing: border-box;
   }
 }
-
