--- a/code/src/index.css
+++ b/code/src/index.css
@@ -27,15 +27,15 @@ code {
 
 .inputField{
   color:  #888888;
-  height: 150px;
+  height: 130px;
   width: 350px;
   display:flex;
   flex-direction: column;
   align-items: baseline;
   border: 1px solid;
-  padding: 10px;
+  padding: 20px;
   box-shadow: 5px 10px black;
-  
+  background-color: rgb(238, 238, 237);
 }
 
 .inputField p{
@@ -43,15 +43,27 @@ code {
   color: black;
 }
 
+
+textarea {
+  outline: none;
+  resize: none;
+  padding: 15px;
+  width: 320px;
+}
+
 li{
   list-style-type:none;
-  height: 70px;
+  height: 100px;
   width: 350px;
   margin: 30px 0px;
   border: 1px solid #888888;
-  padding: 10px;
+  padding: 20px;
   box-shadow: 5px 10px black;
   color:  black;
+  font-size: 1.4em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 ul{
@@ -59,10 +71,36 @@ ul{
 }
 
 .button{
-  background: pink;  
+  background: rgb(250, 179, 179);  
   border: none;
   border-radius: 20px;
-  height: 40px;
-  margin: 10px 0px;
+  height: 60px;
+  width: 200px;
+  cursor: pointer;
+}
+
+.heartAndTimeContainer{
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.heartAndTimeContainer p{
+  margin: 0px;
+}
+
+.heart{
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.emojiHeart{
+  border-radius: 50%;
+  background-color: rgb(250, 179, 179);
+  display: flex;
+  justify-content: center;
+  padding: 7px;
   cursor: pointer;
 }
