--- a/code/src/index.css
+++ b/code/src/index.css
@@ -10,13 +10,13 @@ body {
   margin: 0 auto;
     max-width: 500px;
     font-family: 'Inconsolata', monospace;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 input {
     width: 100%;
     resize: none;
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     padding: 15px;
 }
 
@@ -42,6 +42,15 @@ input {
     border: 1px solid #000;
     box-shadow: 5px 5px 0 0 #000;
     padding: 15px;
+}
+
+.cardbottom {
+  justify-content: space-between;
+color: #cdcdcd;
+}
+
+.likesection time {
+  margin-left: 50%;
 }
 
 code {
