--- a/code/src/NewThought.css
+++ b/code/src/NewThought.css
@@ -14,17 +14,22 @@ label{
   margin:0;
   font-size:13px;
 }
-input{
+textarea{
   width:369px;
   height:50px;
   border: 2px solid #cacaca;
+  text-align: start;
+  font-size: 13px;
 }
 .send-button{
   background-color: #F2ACAD;
   height:35px;
   border-radius:25px;
-  font-family: 'Inconsolata', monospace;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
   width: 50%;
+}
+span{
+  font-family: 'Inconsolata', monospace;
+  font-size: 16px;
 }
