--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,9 +5,119 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Roboto Mono", monospace;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.formContainer {
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  border: 1px solid rgb(143, 141, 141);
+  padding: 10px;
+  width: 30%;
+  margin-bottom: 6%;
+  margin-top: 4%;
+  background: rgb(235, 234, 234);
+  box-shadow: 4px 4px black;
+}
+
+h3 {
+  font-size: 16px;
+  letter-spacing: 1px;
+  font-family: "Roboto", sans-serif;
+  color: rgb(53, 52, 52);
+}
+
+textarea {
+  width: 99%;
+  height: 20%;
+}
+
+.submitButton {
+  width: 180px;
+
+  border-radius: 60px;
+  height: 30px;
+  background: lightpink;
+  color: black;
+}
+
+.heart {
+  padding: 5px;
+}
+
+.textCounter {
+  margin-left: 10px;
+}
+
+.thoughtsContainer {
+  display: flex;
+  justify-content: center;
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 30%;
+  border: 1px solid black;
+  margin-bottom: 5%;
+  padding: 10px;
+  border: 1px solid rgb(143, 141, 141);
+  box-shadow: 4px 4px black;
+}
+
+h1 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.heartAndTimeContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.likeContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.likes {
+  margin-top: 15px;
+}
+
+.heartLike {
+}
+
+button {
+  width: 30px;
+  border: none;
+  border-radius: 50%;
+
+  height: 30px;
+  width: 30px;
+  margin-top: 10px;
+  margin-right: 3px;
+}
+
+.liked {
+  background: #ffb6c1;
+}
+
+.notLiked {
+  background: #bbb7b8;
+}
+
+.time,
+.likes {
+  color: rgb(163, 164, 165);
+  font-size: 14px;
 }
