--- a/code/src/index.css
+++ b/code/src/index.css
@@ -30,27 +30,24 @@ input {
 }
 
 .postedThoughts p {
-  color: gray;
+  color:#cdcdcd;
 }
 
 .postedThoughts h3 {
   color:black;
+  margin-bottom: 10px;
 }
 
 .postedThoughts {
     margin: 20px 10px;
     border: 1px solid #000;
     box-shadow: 5px 5px 0 0 #000;
-    padding: 15px;
+    padding: 20px;
 }
 
-.cardbottom {
+.cardbottom, like-section, span {
   justify-content: space-between;
 color: #cdcdcd;
-}
-
-.likesection time {
-  margin-left: 50%;
 }
 
 code {
@@ -69,4 +66,5 @@ code {
     padding: 10px 20px;
     border-radius: 20px;
     font-weight: bold;
+    font-size: 14px;
   }
