--- a/code/src/components/happyThought.css
+++ b/code/src/components/happyThought.css
@@ -1,15 +1,15 @@
-* {
+/* * {
 
     box-sizing: border-box;
     font-family: 'Inconsolata', monospace;
-    /* font-size: 15px; */
+    /* font-size: 15px; 
     font-weight: bold;
     margin-left: 20px;
     margin-top: 20px;
 }
 
 /** headline **/
-h2 {
+/* h2 {
     display: flex;
     margin-left: 30px;
     
@@ -28,14 +28,14 @@ textarea {
     resize: none;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
+    /* align-items: center; 
     margin-left: 30px;
     border: 1px solid lightgrey;
     margin-top: 0px; 
-}
+} */
 
 /** big button top of the page **/
-button {
+/* button {
     border: 2px solid rgb(247, 171, 183);  
     border-radius: 30px;
     background-color: rgb(247, 171, 183); 
@@ -46,9 +46,9 @@ button {
     height: 45px;
     width: 240px;
     font-size: 15px;   
-}
+} */
 
-article {
+/* article {
     display: flex;
     flex-direction: column;
     width: 500px;
@@ -57,14 +57,47 @@ article {
     background-color: #fff;
     box-shadow: 6px 6px;
     padding-left: 10px;
-} 
+}  */
 
-/* number of likes*/
-span{
+/* circle around heart*/
+/* .img {
     display: flex;
-    margin-left: 100px;
+    /* margin-left: 0px; 
+    background: pink;
+    width: 45px;
+    height: 45px;
+    border-radius: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+}*/
+
+
+
+ .happy-thought {
+  border: 2px solid black;
+  box-shadow: 4px 4px black;
+  width: 300px;
+  height: 130px;
+  margin: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
 }
 
-p {
-    margin-left: 320px;  
+.happy-thought h3 {
+  font-family: 'Inconsolata', monospace;
+  font-size: 16px;
+  margin: 0;
+}
+
+button {
+  display: inline-flex;
+  flex-direction: row;
+  background: pink;
+  
+  height: 30px;
+  border-radius: 100%;
+  justify-content: space-evenly;
+  align-items: center;
 }
