--- a/code/src/HappyThought.css
+++ b/code/src/HappyThought.css
@@ -14,12 +14,16 @@ textarea {
     resize: none;
 }
 
-button {
-    background: blue;
+article button {
+    width: 40px;
+    height: 40px;
+    background: #ffadad;
     border: none;
     border-radius: 30px;
-    width: 100px;
-    height: 30px;
-    margin: 10px;
+    font-size: 16px;
     color: black;
+}
+
+.hearts {
+    flex-direction: row;
 }
