--- a/code/src/components/listthoughts.css
+++ b/code/src/components/listthoughts.css
@@ -10,7 +10,7 @@
   margin: 20px 0;
   padding: 15px;
   width: 30%;
-  height: 100px;
+  height: 100%;
   border: 1px solid #000;
   box-shadow: 5px 10px #000;
   display: flex;
