--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Inconsolata', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
@@ -8,53 +8,5 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-
-form {
-  display: inline-block;
-}
-
-button:focus {
-  outline: 0 !important;
-}
-
-.thought-card {
-  width: 400px;
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  margin: 30px 0;
-  padding: 18px 15px 15px 15px;
-  border: 1px solid black;
-  -webkit-box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
-  -moz-box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
-  box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
-}
-
-.card-bottom {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin-top: 20px;
-  font-size: 14px;
-}
-
-.elapsed-time {
-  display: flex;
-  justify-self: right;
-  align-items: center;
-  color: rgb(148, 147, 147);
-}
-
-.heart-btn {
-  background-color: rgb(231, 231, 231);
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  margin-right: 4px;
-  border: 0px;
-}
-
-.heart-btn:hover {
-  background-color: rgb(247, 168, 223);
+  font-family: 'Inconsolata', monospace;
 }
