--- a/code/src/components/thoughtList.css
+++ b/code/src/components/thoughtList.css
@@ -38,12 +38,16 @@ button:focus {
 }
 
 .heart-btn {
-    background-color: rgb(231, 231, 231);
+    background-color: #e7e7e7;
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    margin-right: 4px;
     border: 0px;
+}
+
+.heart-btn span {
+    text-align: center;
+    display: block;
 }
 
 .heart-btn:hover {
