--- a/code/src/happyForm.css
+++ b/code/src/happyForm.css
@@ -1,16 +1,51 @@
 
 textarea {
     resize:none;
+    margin:5px;
+    width: 250px;
+}
+
+h5 {
+    margin-left: 5px;
+    margin: 10px;
+}
+
+.messageLength {
+    margin:5px;
 }
 
 form {
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height:160px;
+    width:300px;
+    background-color:whitesmoke;
+    box-shadow: 4px 4px black;
+    border:0.5px solid black;
+    margin:5px;
     font-family: 'Inconsolata', monospace;
 }
 
-article{
+
+.formButton {
+    height:30px;
+    width:200px;
+    border-radius:16px;
+    background-color:lightpink;
     font-family: 'Inconsolata', monospace;
+    color:black;
+    margin:5px;
 }
 
-button {
-    font-family: 'Inconsolata', monospace;
+.formButton:hover {
+    cursor: pointer;
+    transform: scale(1.2); 
+    opacity:1;
+}
+
+.heartLogo {
+    margin: 0px 5px;
+    font-size: 150%;
+    color:red;
 }
