--- a/code/src/components/happyThought.css
+++ b/code/src/components/happyThought.css
@@ -101,3 +101,11 @@ button {
   justify-content: space-evenly;
   align-items: center;
 }
+
+button:active {
+   outline: none;
+   border: none;
+   
+}  
+button:focus {outline:0;
+} 
