--- a/code/src/components/thoughtList.css
+++ b/code/src/components/thoughtList.css
@@ -1,9 +1,24 @@
-article {
+form {
     display: inline-block;
 }
 
+/* article {
+    background: #fff;
+} */
+
 textarea {
     resize: none;
+    width: 100%;
+    height: 50px;
+}
+
+.highlight-pink {
+    font-size: 18px;
+    color: rgb(231, 71, 97);
+}
+
+.highlight-grey {
+    color: rgb(148, 146, 146);
 }
 
 button:focus {
@@ -11,8 +26,8 @@ button:focus {
 }
 
 .thought-card {
-    width: 400px;
-    background-color: #fff;
+    width: 450px;
+    background: #EFEBE9;
     display: flex;
     flex-direction: column;
     margin: 30px 0;
@@ -21,6 +36,24 @@ button:focus {
     -webkit-box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
     -moz-box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
     box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
+}
+
+.thought-card:not(form) {
+    width: 450px;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    margin: 30px 0;
+    padding: 18px 15px 15px 15px;
+    border: 1px solid black;
+    -webkit-box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
+    -moz-box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
+    box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
+}
+
+.message {
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .card-bottom {
@@ -43,20 +76,43 @@ button:focus {
     width: 40px;
     border-radius: 50%;
     border: 0px;
-}
-
-.heart-btn span {
-    text-align: center;
-    display: block;
-}
+    /* display: flex; */
+    
+} 
 
 .heart-btn:hover {
     background-color: rgb(247, 168, 223);
+    cursor: pointer;
 }
+
+/* 
+.heart-btn span {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+} */
+
 
 .send-btn {
     height: 40px;
     width: 250px;
-    font-size: 15px;
+    font-size: 16px;
+    font-weight: bold;
     border-radius: 20px;
+    background: #fd7792;
+    cursor: pointer;
 }
+
+.send-btn:disabled,
+.send-btn[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
+/* .send-btn {
+    /* background-color: plum; */
+
+/* } */
