Added styling for when message is not valid

--- a/code/src/App.css
+++ b/code/src/App.css
@@ -8,6 +8,8 @@
   font-family: Menlo;
 }
 
-/* body{
-  font-family: 'Inconsolata', monospace;
-} */
+body{
+  /* font-family: 'Inconsolata', monospace; */
+  display:flex;
+  justify-content: center;
+}
