--- a/code/src/NewThought.css
+++ b/code/src/NewThought.css
@@ -20,6 +20,8 @@ textarea{
   border: 2px solid #cacaca;
   text-align: start;
   font-size: 13px;
+  resize:none;
+  margin-top:5px;
 }
 .send-button{
   background-color: #F2ACAD;
@@ -32,4 +34,15 @@ textarea{
 span{
   font-family: 'Inconsolata', monospace;
   font-size: 16px;
+}
+.button-and-length{
+  display:flex;
+  justify-content: space-between;
+}
+
+.red{
+  color: crimson;
+}
+.red, .black{
+  font-size: 12px;
 }
