--- a/code/src/components/PostedThought.css
+++ b/code/src/components/PostedThought.css
@@ -20,3 +20,9 @@
   font-size: 12px;
   font-weight: bold;
 }
+
+@media (min-width: 0px) and (max-width: 400px){
+  .message-box{
+    width: 250px;
+  }
+  }
