--- a/code/src/components/NewThought.css
+++ b/code/src/components/NewThought.css
@@ -48,14 +48,17 @@ span{
 @media (min-width: 0px) and (max-width: 400px){
   .new-thought{
     width: 250px;
+    height:auto;
   }
   textarea{
     width:240px;
+    height:auto;
   }
   label{
     font-size:16px;
   }
   .send-button{
     width: auto;
+    height:auto;
   }
   }
