--- a/code/src/components/happyThought.css
+++ b/code/src/components/happyThought.css
@@ -1,81 +1,7 @@
-/* * {
-
-    box-sizing: border-box;
-    font-family: 'Inconsolata', monospace;
-    /* font-size: 15px; 
-    font-weight: bold;
-    margin-left: 20px;
-    margin-top: 20px;
-}
-
-/** headline **/
-/* h2 {
-    display: flex;
-    margin-left: 30px;
-    
-}
-
-form {
-    background-color: pink;
-    display: inline-block;
-    flex-direction: column;
-    width: 500px;  
-}
-
-textarea {
-    width: 440px;
-    height: 70px;
-    resize: none;
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; 
-    margin-left: 30px;
-    border: 1px solid lightgrey;
-    margin-top: 0px; 
-} */
-
-/** big button top of the page **/
-/* button {
-    border: 2px solid rgb(247, 171, 183);  
-    border-radius: 30px;
-    background-color: rgb(247, 171, 183); 
-    margin-top: 15px;
-    margin-bottom: 15px;
-    align-self: flex-start;
-    margin-left: 30px;
-    height: 45px;
-    width: 240px;
-    font-size: 15px;   
-} */
-
-/* article {
-    display: flex;
-    flex-direction: column;
-    width: 500px;
-    height: 150px;
-    border: 1px solid black;
-    background-color: #fff;
-    box-shadow: 6px 6px;
-    padding-left: 10px;
-}  */
-
-/* circle around heart*/
-/* .img {
-    display: flex;
-    /* margin-left: 0px; 
-    background: pink;
-    width: 45px;
-    height: 45px;
-    border-radius: 100%;
-    justify-content: space-evenly;
-    align-items: center;
-}*/
-
-
-
- .happy-thought {
+.happy-thought {
   border: 2px solid black;
   box-shadow: 4px 4px black;
+  background-color: rgb(255, 210, 217);
   width: 300px;
   height: 130px;
   margin: 16px;
@@ -91,15 +17,20 @@ textarea {
   margin: 0;
 }
 
-button {
-  display: inline-flex;
-  flex-direction: row;
-  background: pink;
-  
-  height: 30px;
-  border-radius: 100%;
-  justify-content: space-evenly;
-  align-items: center;
+.happy-thought button {
+    display: inline-flex;
+    justify-content: space-evenly;
+    /* background: pink; */
+    background: white;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    margin-right: 4px;
+    border-color:  rgb(244, 134, 170);
+}
+
+.happy-thought button:hover {
+  cursor: pointer;
 }
 
 button:active {
@@ -109,3 +40,7 @@ button:active {
 }  
 button:focus {outline:0;
 } 
+.happy-thought button span {
+  margin-left: 2px;
+  line-height: 2.8;
+}
