--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -34,7 +34,7 @@
   /* background-color:rgb(247, 171, 183);  */
   border: none;
   font-size: 14px;
-  font-weight: bold;
+  font-weight: 500px;
   border-radius: 25px;
   padding: 10px;
   color: black;
