--- a/code/src/components/happyThought.css
+++ b/code/src/components/happyThought.css
@@ -25,7 +25,7 @@
     height: 30px;
     width: 30px;
     border-radius: 50%;
-    margin-right: 4px;
+    margin-right: 7px;
     border-color:  rgb(244, 134, 170);
 }
 
@@ -33,14 +33,14 @@
   cursor: pointer;
 }
 
-button:active {
+/*button:active {
    outline: none;
    border: none;
-   
-}  
-button:focus {outline:0;
-} 
-.happy-thought button span {
-  margin-left: 2px;
+}   */
+button:focus {outline: 3px solid var(--cl-primary);
+}   
+
+/* .happy-thought button span {
+  /* margin-left: 2px; 
   line-height: 2.8;
-}
+} */
