--- a/code/src/components/happyThoughts.css
+++ b/code/src/components/happyThoughts.css
@@ -1,3 +1,12 @@
 h3 {
     color: green;
+    font-family: Menlo;
+}
+
+article {
+    border: 1px solid black;
+    box-shadow: 5px 5px;
+    width: 300px;
+    padding: 20px;
+    margin: 15px 5px;
 }
