--- a/code/src/app.css
+++ b/code/src/app.css
@@ -25,7 +25,6 @@ align-items: center;
   justify-content: space-between;
   width: 400px;
   box-shadow: 8px 8px;
-  height: 140px;
   border: solid 1px #7e7e7e;
   margin-top: 35px;
   padding: 20px 20px 10px 20px;
@@ -94,4 +93,22 @@ footer {
 
 svg {
     animation: 2s linear infinite svg--animation;
+}
+
+/* MOBILE */
+@media screen and (max-width: 600px) {
+  .inside-cards{  
+    width: 340px;
+    padding: 10px 10px 5px 10px;
+  }
+  p {
+    font-size: 14px;
+  }
+  ul .time{
+    font-size: 12px;
+  }
+  footer {
+    font-size: 13px;
+  }
+
 }
