--- a/code/src/HappyForm.css
+++ b/code/src/HappyForm.css
@@ -1,11 +1,12 @@
 form {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 100%;
     padding: 10px;
     background: #f2f0f0;
     border: solid 1px black;
     box-shadow: black 8px 8px;
+    margin: 40px 0px 20px;
 }
 
 form button {
@@ -21,4 +22,21 @@ form button {
 form button:disabled {
     opacity: 0.5;
 }
+
+/* MEDIA QUERIES */
+
+/* tablet version */
+@media (min-width: 667px) {
+    form {
+        width: 400px;
+    }
+    
+}
+
+/* desktop version */
+@media (min-width: 1025px) {
+    form {
+        width: 400px;
+    }
+  }
 
