--- a/code/src/components/happyThoughts.css
+++ b/code/src/components/happyThoughts.css
@@ -31,6 +31,7 @@ article {
     background-color: rgba(128, 128, 128, 0.459);
     border: none;
     cursor: pointer;
+    align-self: center;
 }
 
 span {
