updated character number count with state

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -123,6 +123,11 @@ main {
   color: #d5d5d5;
 }
 
+.charNum {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 /** LOADING and ERROR **/
 
 .loading,
